[tool.poetry]
name = "hw-18"
version = "0.1.0"
description = ""
authors = ["Sofia Tuvykina <hdfaa.56@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selene = "2.0.0rc4"
pytest = "7.4.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pylint = "3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"